--- a/Untitled18.ipynb
+++ b/Untitled18.ipynb
@@ -44,93 +44,129 @@
     },
     {
       "metadata": {
-        "id": "mm6KZU6Twsoj",
+        "id": "BwpOiBlrEv7M",
         "colab_type": "code",
         "colab": {}
       },
       "cell_type": "code",
       "source": [
-        "def add(x, y):\n",
-        "   return x + y\n",
         "\n",
-        "# This function subtracts two numbers \n",
-        "def sub(x, y):\n",
-        "   return x - y\n",
-        "\n",
-        "# This function multiplies two numbers\n",
-        "def mult(x, y):\n",
-        "   return x * y\n",
-        "\n",
-        "# This function divides two numbers\n",
-        "def div(x, y):\n",
-        "   return x / y"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "3r4hRWrms6fY",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
         "worker = collections.namedtuple('worker', [\n",
-        "    'name'\n",
-        "    'operation'\n",
-        "        ])\n"
+        "    'name',\n",
+        "    'operation',\n",
+        "    'prediction',\n",
+        "    \n",
+        " ])"
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
       "metadata": {
-        "id": "Ftn4ILLJt3JA",
+        "id": "pcWddRkQE2fI",
         "colab_type": "code",
-        "outputId": "6df16b23-8f47-4032-cbc8-4f7dff0f9d39",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 129
-        }
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
         "workers =(\n",
-        "     worker(name = 'worker-2', operation =add(x,y),\n",
-        "     worker(name = 'worker-2', operation =sub(x,y),  \n",
-        "     worker(name = 'worker-2', operation =mult(x,y),\n",
-        "     worker(name = 'worker-2', operation =div(x,y),\n",
+        "     worker(name='worker-1', operation = 'A', prediction = 0.77),\n",
+        "     worker(name='worker-2', operation = 'B', prediction = 0.67),  \n",
+        "     worker(name='worker-3', operation = 'C', prediction = 0.4),\n",
+        "     worker(name='worker-4', operation = 'D', prediction = 0.87),\n",
         "           \n",
-        ")\n",
-        "    \n",
-        " \n",
-        "  "
+        ")"
       ],
       "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "41H3LusuE7cF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "77c0bbaa-3a4f-48a5-b682-1fbffa3a542d"
+      },
+      "cell_type": "code",
+      "source": [
+        "print(workers)"
+      ],
+      "execution_count": 14,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-33-0a9406c726ec>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-          ]
+          "output_type": "stream",
+          "text": [
+            "(worker(name='worker-1', operation='A', prediction=0.77), worker(name='worker-2', operation='B', prediction=0.67), worker(name='worker-3', operation='C', prediction=0.4), worker(name='worker-4', operation='D', prediction=0.87))\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
     {
       "metadata": {
-        "id": "A9r_XTwTvd8G",
+        "id": "mA0NrEjVFBC2",
         "colab_type": "code",
         "colab": {}
       },
       "cell_type": "code",
       "source": [
-        ""
+        "def transform (W):\n",
+        "  \n",
+        "  print(f'Proces.{os.getpid()}.working by.{W.name}')\n",
+        "  result ={'name':x.name, 'Loss':1-W.prediction}\n",
+        "  print(f'Process.{os.getpid()}.done processing.{w.operation}')\n",
+        "  return result \n",
+        "\n"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "0UJViSwgE43o",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "24862f57-aeb9-478a-9cdf-300f22e49324"
+      },
+      "cell_type": "code",
+      "source": [
+        "pool =multiprocessing.Pool()\n",
+        "result = pool.map(transform, workers)\n",
+        "print(result)"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Proces.211.working by.worker-1\n",
+            "Proces.211.working by.worker-3\n",
+            "Proces.212.working by.worker-2\n",
+            "Proces.211.working by.worker-4\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mRemoteTraceback\u001b[0m                           Traceback (most recent call last)",
+            "\u001b[0;31mRemoteTraceback\u001b[0m: \n\"\"\"\nTraceback (most recent call last):\n  File \"/usr/lib/python3.6/multiprocessing/pool.py\", line 119, in worker\n    result = (True, func(*args, **kwds))\n  File \"/usr/lib/python3.6/multiprocessing/pool.py\", line 44, in mapstar\n    return list(map(*args))\n  File \"<ipython-input-15-f773378b3491>\", line 4, in transform\n    result ={'name':x.name, 'Loss':1-W.prediction}\nNameError: name 'x' is not defined\n\"\"\"",
+            "\nThe above exception was the direct cause of the following exception:\n",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-16-2d9b7181b141>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mpool\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0mmultiprocessing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPool\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpool\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mworkers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/lib/python3.6/multiprocessing/pool.py\u001b[0m in \u001b[0;36mmap\u001b[0;34m(self, func, iterable, chunksize)\u001b[0m\n\u001b[1;32m    286\u001b[0m         \u001b[0;32min\u001b[0m \u001b[0ma\u001b[0m \u001b[0mlist\u001b[0m \u001b[0mthat\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mreturned\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    287\u001b[0m         '''\n\u001b[0;32m--> 288\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_map_async\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miterable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmapstar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchunksize\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    289\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    290\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mstarmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miterable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchunksize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/lib/python3.6/multiprocessing/pool.py\u001b[0m in \u001b[0;36mget\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    668\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    669\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 670\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    671\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    672\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_set\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
+          ]
+        }
+      ]
     },
     {
       "metadata": {
