--- a/Untitled18.ipynb
+++ b/Untitled18.ipynb
@@ -84,23 +84,30 @@
       "metadata": {
         "id": "41H3LusuE7cF",
         "colab_type": "code",
-        "outputId": "59f26c58-665a-48c8-dc9e-23dee9497b29",
+        "outputId": "4bd52459-3fae-4cb3-dc72-483560bd83fc",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 119
         }
       },
       "cell_type": "code",
       "source": [
-        "print(workers)\n",
-        "print(multiprocessing.cpu_count())"
+        "for i in workers:\n",
+        "  print(f'This is worker.{i}')\n",
+        "print()\n",
+        "print('Colab has ',  multiprocessing.cpu_count(), 'CPUs')"
       ],
-      "execution_count": 16,
+      "execution_count": 138,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "(worker(name='worker-1', operation='A', prediction=0.77), worker(name='worker-2', operation='B', prediction=0.67), worker(name='worker-3', operation='C', prediction=0.4), worker(name='worker-4', operation='D', prediction=0.87))\n"
+            "This is worker.worker(name='worker-1', operation='A', prediction=0.77)\n",
+            "This is worker.worker(name='worker-2', operation='B', prediction=0.67)\n",
+            "This is worker.worker(name='worker-3', operation='C', prediction=0.4)\n",
+            "This is worker.worker(name='worker-4', operation='D', prediction=0.87)\n",
+            "\n",
+            "Colab has  2 CPUs\n"
           ],
           "name": "stdout"
         }
@@ -118,8 +125,9 @@
         "  \n",
         "  print(f'Proces.{os.getpid()}.working by.{W.name}')\n",
         "  result ={'name':W.name, 'Loss':1-W.prediction}\n",
-        "  print(f'Process.{os.getpid()}.done processing.{w.operation}')\n",
+        "  print(f'Process.{os.getpid()}.done processing.{W.operation}')\n",
         "  return result \n",
+        "  #pass \n",
         "\n"
       ],
       "execution_count": 0,
@@ -129,45 +137,35 @@
       "metadata": {
         "id": "0UJViSwgE43o",
         "colab_type": "code",
-        "outputId": "277082e4-3c9b-4b87-ec8b-917a57c81f85",
+        "outputId": "0af6d4bd-da99-4ff3-8c7d-a73dfa478e69",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 758
+          "height": 170
         }
       },
       "cell_type": "code",
       "source": [
-        "pool =multiprocessing.Pool(processes =1)\n",
+        "#processes = 1\n",
+        "pool =multiprocessing.Pool()\n",
         "result = pool.map(transform, workers)\n",
         "print(result)"
       ],
-      "execution_count": 18,
+      "execution_count": 140,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Proces.201.working by.worker-1\n",
-            "Proces.201.working by.worker-2\n",
-            "Proces.201.working by.worker-3\n",
-            "Proces.201.working by.worker-4\n"
+            "Proces.480.working by.worker-1\n",
+            "Process.480.done processing.A\n",
+            "Proces.480.working by.worker-3\n",
+            "Proces.481.working by.worker-2\n",
+            "Process.480.done processing.C\n",
+            "Proces.480.working by.worker-4\n",
+            "Process.481.done processing.B\n",
+            "Process.480.done processing.D\n",
+            "[{'name': 'worker-1', 'Loss': 0.22999999999999998}, {'name': 'worker-2', 'Loss': 0.32999999999999996}, {'name': 'worker-3', 'Loss': 0.6}, {'name': 'worker-4', 'Loss': 0.13}]\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mRemoteTraceback\u001b[0m                           Traceback (most recent call last)",
-            "\u001b[0;31mRemoteTraceback\u001b[0m: \n\"\"\"\nTraceback (most recent call last):\n  File \"/usr/lib/python3.6/multiprocessing/pool.py\", line 119, in worker\n    result = (True, func(*args, **kwds))\n  File \"/usr/lib/python3.6/multiprocessing/pool.py\", line 44, in mapstar\n    return list(map(*args))\n  File \"<ipython-input-17-bd55618ec5b5>\", line 5, in transform\n    print(f'Process.{os.getpid()}.done processing.{w.operation}')\nNameError: name 'w' is not defined\n\"\"\"",
-            "\nThe above exception was the direct cause of the following exception:\n",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-18-18a25da529c3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mpool\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0mmultiprocessing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPool\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprocesses\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpool\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mworkers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/lib/python3.6/multiprocessing/pool.py\u001b[0m in \u001b[0;36mmap\u001b[0;34m(self, func, iterable, chunksize)\u001b[0m\n\u001b[1;32m    286\u001b[0m         \u001b[0;32min\u001b[0m \u001b[0ma\u001b[0m \u001b[0mlist\u001b[0m \u001b[0mthat\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mreturned\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    287\u001b[0m         '''\n\u001b[0;32m--> 288\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_map_async\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miterable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmapstar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchunksize\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    289\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    290\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mstarmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miterable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchunksize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/lib/python3.6/multiprocessing/pool.py\u001b[0m in \u001b[0;36mget\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    668\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    669\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 670\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    671\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    672\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_set\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'w' is not defined"
-          ]
         }
       ]
     },
@@ -175,26 +173,14 @@
       "metadata": {
         "id": "_OaKSKA-3Okc",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "cb5ba384-2152-47e5-9a61-e147b1867205"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
         ""
       ],
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "2\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
