--- a/Untitled5.ipynb
+++ b/Untitled5.ipynb
@@ -62,23 +62,23 @@
       "metadata": {
         "id": "S35JuqkQm3Cp",
         "colab_type": "code",
+        "outputId": "bf01f226-54f1-4625-b65e-5e08b17c8f1e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 88
-        },
-        "outputId": "73004784-2ac4-45e2-b0e1-99e3312fc3a7"
+        }
       },
       "cell_type": "code",
       "source": [
         "class_numbers =[0,1,2,3,4,5,6,7,8,9]\n",
         "\n",
         "model = keras.Sequential([\n",
-        "    keras.layers.Flatten(input_shape=(28, 28)),\n",
-        "    keras.layers.Dense(128, activation=tf.nn.relu),\n",
-        "    keras.layers.Dense(10, activation=tf.nn.softmax)\n",
+        "      keras.layers.Flatten(input_shape=(28, 28)),\n",
+        "      keras.layers.Dense(128, activation=tf.nn.relu),\n",
+        "      keras.layers.Dense(10, activation=tf.nn.softmax)\n",
         "])"
       ],
-      "execution_count": 4,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,19 +95,19 @@
       "metadata": {
         "id": "mG0YZWbtm4wI",
         "colab_type": "code",
+        "outputId": "906d91b7-76d7-4e95-c754-5df2d6018f2d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 459
-        },
-        "outputId": "568e43f2-a689-44e1-e1d1-10ce191b2d0b"
+        }
       },
       "cell_type": "code",
       "source": [
-        "model.compile(optimizer='adam', \n",
+        " model.compile(optimizer='adam', \n",
         "              loss='sparse_categorical_crossentropy',\n",
         "              metrics=['accuracy'])  \n",
         "\n",
-        "model.fit(train_images, train_labels, epochs=10) \n",
+        "worker1= model.fit(train_images, train_labels, epochs=10) \n",
         "\n",
         "test_loss, test_acc = model.evaluate(test_images, test_labels)\n",
         "\n",
@@ -120,34 +120,34 @@
         "print(test_labels[0])\n",
         "print(train_images.shape)\n"
       ],
-      "execution_count": 5,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Epoch 1/10\n",
-            "60000/60000 [==============================] - 8s 132us/sample - loss: 11.3985 - acc: 0.2923\n",
+            "60000/60000 [==============================] - 8s 138us/sample - loss: 11.6107 - acc: 0.2789\n",
             "Epoch 2/10\n",
-            "60000/60000 [==============================] - 7s 114us/sample - loss: 10.0897 - acc: 0.3735\n",
+            "60000/60000 [==============================] - 8s 127us/sample - loss: 9.5700 - acc: 0.4056\n",
             "Epoch 3/10\n",
-            "60000/60000 [==============================] - 9s 142us/sample - loss: 8.5073 - acc: 0.4717\n",
+            "60000/60000 [==============================] - 7s 119us/sample - loss: 8.2497 - acc: 0.4872\n",
             "Epoch 4/10\n",
-            "60000/60000 [==============================] - 8s 127us/sample - loss: 8.4458 - acc: 0.4757\n",
+            "60000/60000 [==============================] - 7s 122us/sample - loss: 7.6987 - acc: 0.5217\n",
             "Epoch 5/10\n",
-            "60000/60000 [==============================] - 7s 123us/sample - loss: 8.4391 - acc: 0.4762\n",
+            "60000/60000 [==============================] - 6s 106us/sample - loss: 7.7162 - acc: 0.5206\n",
             "Epoch 6/10\n",
-            "60000/60000 [==============================] - 7s 114us/sample - loss: 8.3823 - acc: 0.4797\n",
+            "60000/60000 [==============================] - 8s 126us/sample - loss: 7.6020 - acc: 0.5276\n",
             "Epoch 7/10\n",
-            "60000/60000 [==============================] - 8s 140us/sample - loss: 8.3390 - acc: 0.4825\n",
+            "60000/60000 [==============================] - 8s 130us/sample - loss: 7.5827 - acc: 0.5291\n",
             "Epoch 8/10\n",
-            "60000/60000 [==============================] - 7s 123us/sample - loss: 8.4023 - acc: 0.4786\n",
+            "60000/60000 [==============================] - 7s 121us/sample - loss: 7.5611 - acc: 0.5304\n",
             "Epoch 9/10\n",
-            "60000/60000 [==============================] - 8s 137us/sample - loss: 8.3013 - acc: 0.4848\n",
+            "60000/60000 [==============================] - 6s 105us/sample - loss: 7.4798 - acc: 0.5354\n",
             "Epoch 10/10\n",
-            "60000/60000 [==============================] - 7s 115us/sample - loss: 8.2844 - acc: 0.4859\n",
-            "10000/10000 [==============================] - 0s 41us/sample - loss: 8.1364 - acc: 0.4952\n",
-            "Test accuracy: 0.4952\n",
-            "Test loss: 8.136415310668946\n",
+            "60000/60000 [==============================] - 6s 104us/sample - loss: 7.4066 - acc: 0.5402\n",
+            "10000/10000 [==============================] - 0s 41us/sample - loss: 7.4687 - acc: 0.5360\n",
+            "Test accuracy: 0.536\n",
+            "Test loss: 7.468652341461182\n",
             "7\n",
             "7\n",
             "(60000, 28, 28)\n"
@@ -160,11 +160,11 @@
       "metadata": {
         "id": "MOP-V4M2m_Fj",
         "colab_type": "code",
+        "outputId": "32a0a727-5015-4dc7-91c5-efc279c5ecad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1863
-        },
-        "outputId": "42bea433-f139-4e52-c72c-5e0de43a6432"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -192,7 +192,7 @@
         "    plt.xlabel(class_numbers[train_labels[i]])\n",
         "plt.show()\n"
       ],
-      "execution_count": 6,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
